# amazon-books-scraper

./: CMakeLists.txt  main.c  main.cpp
lib/http/: http.c  http.cpp  http.h  http.hpp
lib/scraper/: scraper.c  scraper.cpp  scraper.h  scraper.hpp
lib/types/: types.h  types.hpp
lib/user_input/: user_input.c  user_input.cpp  user_input.h  user_input.hpp
